# chess.ai

./: .env  .env.production  .gitignore  README.md  app.py  chess.db  index.html  package-lock.json  package.json  pytest.ini  render.yaml  requirements.txt  setup.py  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
app/: __init__.py
backend/: Dockerfile  README.md  __init__.py  api.py  app.py  app_factory.py  chess.db  chess_engine.py  chess_tournament.py  claude_adapter.py  config.py  crud.py  gemini_adapter.py  go_board.py  go_engine.py  go_tournament.py  leaderboard.json  leaderboard.py  llama_adapter.py  llm_interface.py  main.py  models.py  openai_adapter.py  openings.json  openings.py  pyproject.toml  requirements.txt  run.py  schemas.py  test_ai_game.py  test_go_ai.py  test_tournament.py  tournament.py  utils.py  websocket.py  websocket.py.bak
backend/app/: __init__.py  flask_app.py  game_logic.py  main.py  models.py  routes.py
backend/tests/: pytest.py  test_endpoints.py  test_fastapi_wrapper.py  test_llm_adapters.py  test_placeholder.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  example.test.js  main.jsx
frontend/src/components/: ChessBoard.jsx  GoBoard.jsx
public/: _redirects
src/: App.css  App.jsx  App.module.css  index.css
src/components/: AISelector.css  AISelector.jsx  ChessBoard.css  ChessBoard.jsx  GoBoard.css  GoBoard.jsx  Leaderboard.css  Leaderboard.jsx  TournamentLeaderboard.jsx
src/config/: ai.ts
src/services/: api.js  api.ts  socket.ts
src/store/: gameSlice.ts
src/test/: setup.ts
src/types/: chess.d.ts  chess.ts  go.ts  leaderboard.ts  react.d.ts
(+27 files in other folders)
